Fixed spacing in video controls bottom bar

--- a/src/bottomBar-layout.css
+++ b/src/bottomBar-layout.css
@@ -148,14 +148,12 @@
 .bottomControls-31YuPK.controlSection-1mNixL {
   background: var(--background-secondary-alt);
   box-sizing: border-box;
-  /* height: calc(var(--bottomBarLayout-height) + 9px); */
   height: var(--bottomBarLayout-height);
   border-top: 1px solid var(--background-tertiary);
-  padding: 8px;
+  padding: 0px 12px;
 }
 
 .bottomControls-31YuPK.controlSection-1mNixL
   .flex-2S1XBF.flex-3BkGQD.horizontal-112GEH.horizontal-1Piu5-.flex-3BkGQD.directionRow-2Iu2A9.justifyCenter-rrurWZ.alignCenter-14kD11.noWrap-hBpHBz {
-  transform: scale(75%);
-  padding-bottom: 3px;
+  transform: scale(70%);
 }
